Added Scan feature
